# DataSet-Quality-Checker

./: Dockerfile.frontend  LICENSE  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/: ci.yml
app/: main.py
app/api/: analyze.py  download.py
app/core/: anomaly.py  cleaner.py  loader.py  profiler.py  quality.py  scorer.py  suggestions.py
app/schemas/: response.py
app/utils/: storage.py
frontend/: streamlit_app.py
scripts/: dev.py
